complete user register login Integrate: * jwt to generate and parse token * jordan-wright/email to send email * go-redis and go-uuid to helpe save time-limited verify code and generate random uuid
