# router/app.go
@@ -15,8 +15,19 @@ func Router() *gin.Engine {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	// 配置路由规则
-	r.GET("/ping", service.Ping)
+
+	// 问题
 	r.GET("/problem-list", service.GetProblemList)
+	r.GET("/problem-detail", service.GetProblemDetail)
+
+	// 用户
+	r.GET("/user-detail", service.GetUserDetail)
+	r.POST("/login", service.Login)
+	r.POST("/send-code", service.SendVerifyCode)
+	r.POST("/register", service.Register)
+
+	// 提交列表
+	r.GET("/submit-list", service.GetSubmitList)
 
 	return r
 
